<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="#F1D1D1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/result"
        android:layout_marginBottom="60dp"/>

<!--    <EditText-->
<!--        android:id="@+id/num1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/title"-->
<!--        android:layout_marginTop="96dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        tools:textColor="#000000"-->
<!--        android:inputType="number"-->
<!--        android:background="@color/white"-->
<!--        tools:hint="Enter Number One here"/>-->

<!--    <EditText-->
<!--        android:id="@+id/num2"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="@color/white"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_marginTop="4dp"-->
<!--        tools:textColor="#000000"-->
<!--        app:layout_constraintTop_toBottomOf="@id/num1"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:inputType="number"-->
<!--        tools:hint="Enter Number One here"/>-->


    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:textColor="#4C8E4E"
        android:layout_marginTop="32dp"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@id/negative"
        app:layout_constraintEnd_toEndOf="parent"/>



    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toEndOf="@id/point"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/addition"
        app:layout_constraintStart_toEndOf="@id/three"
        app:layout_constraintBottom_toTopOf="@id/equal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/sub"
        app:layout_constraintStart_toEndOf="@id/six"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/add"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/multiply"
        app:layout_constraintStart_toEndOf="@id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/sub"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_button"
        android:text="@string/division"
        app:layout_constraintStart_toEndOf="@id/mod"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/mult"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/pointstr"
        app:layout_constraintEnd_toStartOf="@id/equal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toEndOf="@id/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="32sp"/>


    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@id/two"
        app:layout_constraintBottom_toTopOf="@id/point"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@id/add"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@id/sub"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toEndOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/three"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@id/eight"
        app:layout_constraintEnd_toStartOf="@id/mult"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/six"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/modulo"
        app:layout_constraintStart_toEndOf="@id/negative"
        app:layout_constraintEnd_toStartOf="@id/divide"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/nine"
        android:textSize="32sp"/>


    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@id/point"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="32sp"/>



    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/zero"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toEndOf="@id/one"
        app:layout_constraintEnd_toStartOf="@id/three"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@id/six"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toEndOf="@id/four"
        app:layout_constraintBottom_toTopOf="@id/two"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@id/nine"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/five"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/x"
        app:layout_constraintStart_toEndOf="@id/ac"
        app:layout_constraintEnd_toStartOf="@id/mod"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/eight"
        android:textSize="32sp"/>




    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/zero"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@id/two"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@id/five"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/one"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@id/eight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/four"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/ac"
        app:layout_constraintEnd_toStartOf="@id/negative"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/seven"
        android:textSize="32sp"/>

    <!--        app:layout_constraintEnd_toStartOf="@id/negative"-->






</androidx.constraintlayout.widget.ConstraintLayout>